[brew][cask][macos] Add dockutil + config script

--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -13,4 +13,4 @@ set -eux -o pipefail
 
 brew bundle install --no-lock --file={{ joinPath .chezmoi.sourceDir "dot_Brewfile" | quote }}
 
-{{ end -}}
+{{- end -}}
