--- a/run_onchange_after_dock-arrange-darwin.sh.tmpl
+++ b/run_onchange_after_dock-arrange-darwin.sh.tmpl
@@ -17,6 +17,7 @@ cat << EOF | xargs -L 1 -I {} dockutil --no-restart --add '{}'
 /Applications/Discord.app
 /Applications/Slack.app
 /System/Applications/Messages.app
+/Applications/Notion.app
 /Applications/Stashpad.app
 /Applications/Warp.app
 /Applications/Sublime Text.app
