--- a/run_onchange_after_dock-arrange-darwin.sh.tmpl
+++ b/run_onchange_after_dock-arrange-darwin.sh.tmpl
@@ -9,7 +9,7 @@ dockutil --list | awk -F\t '{print "dockutil --remove \""$2"\" --no-restart"}' |
 # Add persistent Dock applications in left-to-right order.
 cat << EOF | xargs -L 1 -I {} dockutil --no-restart --add '{}'
 /System/Applications/Launchpad.app
-/System/Applications/System Preferences.app
+/System/Applications/System Settings.app
 /System/Applications/Music.app
 /Applications/Google Chrome.app
 /Applications/Fantastical.app
